k3s-userapps/photoprism/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  namespace: photoprism
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 2342
  selector:
    app.kubernetes.io/pod: photoprism
  type: ClusterIP
