k3s-userapps/photoprism/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://photo.kirillorlov.pro"
    gethomepage.dev/group: Apps
    gethomepage.dev/name: Photoprism
    gethomepage.dev/icon: photoprism.png
    gethomepage.dev/pod-selector: "app.kubernetes.io/pod=photoprism"
    gethomepage.dev/widget.type: photoprism
    gethomepage.dev/widget.url: http://photoprism.photoprism.svc.cluster.local
    gethomepage.dev/widget.username: admin
    gethomepage.dev/widget.password: "$WIDGET_KEY$"
    kirillorlov.pro/annotationsFromSecretName: photoprism-secret
  name: photoprism
  namespace: photoprism
spec:
  rules:
  - host: photo.kirillorlov.pro
    http:
      paths:
      - backend:
          service:
            name: photoprism
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - photo.kirillorlov.pro
    secretName: photo-server-tls
